--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function onDeviceReady()
 var element = document.getElementById('appInfo');      
 //replace it with specific information about the device   
 //running the application      
-element.innerHTML = 'PhoneGap (version ' +device.phonegap + ')<br />' + device.platform + ' '+device.name + ' (version ' + device.version + ').';   }    
+element.innerHTML = 'PhoneGap (version ' +device.cordova + ')<br />' + device.platform + ' '(version ' + device.version + ').';   }    
 </script>
 </head>  
 <body onload="onBodyLoad()">  
